adds RestTemplate